--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <h1 class="test">練習</h1>
+
+   <!-- jqueryが必ず先！ -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   <!--  -->
+   <script src="js/app.js"></script>
   
 </body>
 </html>
